# jira-report

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PRD.md  TASKS.md
src/: jira.rs  main.rs  report.rs
templates/: index.html
