[package]
name = "jira-report"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jira-report"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tera = "1"
reqwest = { version = "0.12", features = ["json"] }
rust_xlsxwriter = { version = "0.79", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
